# avito

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
app/core/: detector.py  llm_usage.py  mc_reference.py  settings.py  text_normalizator.py
app/mc_search_dataset/: __init__.py  mc_search_dataset.py
app/schemas/: __init__.py  schemas.py
